tests/mm0_mmu/fail/bad-int5.mm0
--                  V--  forbidden 0 prefix -
prefix p : $+$ prec 01;
